# CookieSpy

./: .dockerignore  .gitignore  Dockerfile  README.md  coba.py  cookies.csv  cookies.json  cookies_1755553510.json  cookies_1755553812.json  cookiespy.drawio  cookiespy.py  exporter.py  pyproject.toml  requirements.txt
.github/workflows/: ci-release.yml  tests.yml
src/cookiespy/: __init__.py  cli.py  cookie.py  webapp.py
src/cookiespy.egg-info/: PKG-INFO  SOURCES.txt
test/: testing.py
tests/: test_cli.py
